<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>avoidance</name>
  <version>0.3.1</version>
  <description>Avoidance is a ROS2 package for computer vision based navigation.</description>

  <maintainer email="martina@auterion.com">Martina Rivizzigno</maintainer>
  <author email="jaeyoung@auterion.com">Jaeyoung Lim</author>
  <author email="jonas@auterion.com">Jonas Vautherin</author>
  <author email="julian@auterion.com">Julian Kent</author>
  <author email="martina@auterion.com">Martina Rivizzigno</author>
  <author email="nuno.marques@dronesolutions.io">Nuno Marques</author>
  <author email="nico@auterion.com">Nico van Duijn</author>
  <author email="tanja@auterion.com">Tanja Baumann</author>

  <license>BSD 3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>eigen3_cmake_module</buildtool_depend>

  <build_depend>boost</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>pcl</build_depend>

  <depend>builtin_interfaces</depend>
  <depend>rclcpp</depend>

  <depend>geometry_msgs</depend>
  <depend>perception_pcl</depend>
  <depend>px4_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>stereo_image_proc</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <buildtool_export_depend>eigen3_cmake_module</buildtool_export_depend>

  <build_export_depend>boost</build_export_depend>
  <build_export_depend>eigen</build_export_depend>
  <build_export_depend>pcl</build_export_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
